--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.4.0
+beautifulsoup4==4.10.0
 dj-database-url==0.5.0
-Django==1.11.17
+Django==3.2.8
+django-bootstrap-v5==1.0.6
 django-heroku==0.3.1
 gunicorn==20.1.0
 Pillow==8.2.0
 psycopg2==2.8.6
 python-decouple==3.4
 pytz==2021.1
+soupsieve==2.2.1
 sqlparse==0.4.1
 whitenoise==5.2.0
