--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.4.0
 beautifulsoup4==4.10.0
+certifi==2021.10.8
+cloudinary==1.26.0
 dj-database-url==0.5.0
 Django==3.2.8
 django-bootstrap-v5==1.0.6
@@ -9,6 +11,8 @@ Pillow==8.2.0
 psycopg2==2.8.6
 python-decouple==3.4
 pytz==2021.1
+six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+urllib3==1.26.7
 whitenoise==5.2.0
